--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "next": "latest",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hook-form": "^7.43.3",
     "react-icons": "^4.7.1",
+    "recoil": "^0.7.7",
     "tailwind-scrollbar": "^2.1.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
