--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
     "@emotion/styled": "^11.10.6",
     "@heroicons/react": "^1.0.6",
     "@mui/material": "^5.11.11",
+    "@stripe/firestore-stripe-payments": "^0.0.6",
+    "e": "^0.2.32",
     "firebase": "^9.17.1",
     "next": "latest",
+    "next-transpile-modules": "^10.0.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-hook-form": "^7.43.3",
