--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-icons": "^4.7.1",
     "react-player": "^2.11.2",
     "recoil": "^0.7.7",
+    "styled-components": "^5.3.9",
     "tailwind-scrollbar": "^2.1.0",
     "tailwind-scrollbar-hide": "^1.1.7"
   },
