--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "private": true,
   "scripts": {
     "dev": "next dev",
-    "build": "next build",
+    "build": "next start",
     "start": "next start",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
